Desenvolvimento parcial dos metodos para devolução.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lojavirtual_0.pkg1.pkg2.Lojavirtual_012
+main.class=LojaVirtual.TelaInicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
